<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:orientation="vertical"

    tools:context=".main.EnterFragment">

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main"
        android:backgroundTint="@color/pink_sec"
        android:hint="@string/login"
        android:minHeight="48dp"
        android:textColor="@color/milk"
        android:textColorHint="@color/pink_sec" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main"
        android:backgroundTint="@color/pink_sec"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textColor="@color/milk"
        android:textColorHint="@color/pink_sec" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/main"
        android:layout_marginEnd="@dimen/main"
        android:backgroundTint="@color/pink_sec"
        android:fontFamily="@font/dihjauti_bold"
        android:text="@string/enter"
        android:textColor="@color/milk"
        app:cornerRadius="@dimen/main" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/main"
        android:layout_marginEnd="@dimen/main"
        android:backgroundTint="@color/pink_sec"
        android:fontFamily="@font/dihjauti_bold"
        android:text="@string/new_registration"
        android:textColor="@color/milk"
        app:cornerRadius="@dimen/main" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/kiss" />

</LinearLayout>